--- a/app/views/blogs/_comment_form.html.erb
+++ b/app/views/blogs/_comment_form.html.erb
@@ -1,11 +1,11 @@
 
-<%= semantic_form_for @new_comment do |f| %>  
+<%= simple_form_for @new_comment, :html => {:class => 'form-horizontal'} do |f| %>  
     <%= f.hidden_field :blog_id %>
     <%= f.input :commenter, :label => "Name" %>
     <%= f.input :commenter_email, :label => "Email" %>
     <%= f.input :commenter_permalink, :label => "Website" %>
     <%= f.input :content, :label => "Comment", :input_html => { :rows => 6, :class => "input-xxlarge" } %>
-  <div class="pull-right"><%= f.commit_button :button_html => {:class => "primary"}, :label => "Submit" %></div>
+  <div class="pull-right"><%= f.button :submit, 'Submit', :class => "primary" %></div>
 <% end %>
 
 
