--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -15,7 +15,7 @@
   “Services”) to our users (“you”, “your”). This Privacy Policy sets forth Bubboli’s policy with respect 
   to information that is collected from Site visitors and users of the Services.</p>
 </br>
-  <strong>Non-personal Information</stong>
+  <strong>Non-personal Information</strong>
   <p>When you interact with Bubboli through the Site or Services, we collect non-personal information about 
   your activities online (such as the pages you access most frequently or the search terms you enter), 
   and information volunteered by you (such as survey). Such information, which is collected passively using 
