--- a/app/views/shared/_blog_index.html.erb
+++ b/app/views/shared/_blog_index.html.erb
@@ -1,6 +1,6 @@
 <div class="span2">
   <ul class="no-margin-or-bullet">
-    <h3 class="mynewfont"><li><%= blog.publish_date.strftime("%b %e") %></li></h3>
+    <h3 class="mynewfont" style="color: #909090"><li><%= blog.publish_date.strftime("%b %e") %></li></h3>
     <li style="font-size: 11px">By: <%= blog.author %></li>
   </ul>
 </div>
