--- a/app/views/blog_categories/manage.html.erb
+++ b/app/views/blog_categories/manage.html.erb
@@ -1,22 +1,19 @@
 <% @page_title = "Manage Blog Categories" %>
 
 <div class="container">
-  
-  <h4>Manage Blog Categories</h4>
 
-  <%= semantic_form_for @blog_category do |f| %>
-    <%= f.inputs do %>
+  <div class="span4 offset4">
+  <h4>Manage Blog Categories</h4>
+  <br>
+
+  <%= simple_form_for @blog_category do |f| %>
 
       <%= render(:partial => 'shared/manage', :locals => {:f => f}) %>
-
-    <% end %>
   
-  
-  <div class="pull-right">
   <div class="btn primary white-link"><%= link_to "Cancel", list_blog_category_path %></div>
-  <%= f.commit_button :button_html => {:class => "primary"}, :label => "Create" %>
-  </div>
+  <%= f.button :submit, 'Save', :class => "primary" %>
   
   <% end %>
+  </div>
   
 </div>
