--- a/app/views/gifts/list.html.erb
+++ b/app/views/gifts/list.html.erb
@@ -7,7 +7,7 @@
   <h4>List of Gifts</h4></br>
   
   <div>
-    <%= semantic_form_for @search_list, :url => list_gift_path do |f| %>
+    <%= simple_form_for @search_list, :url => list_gift_path do |f| %>
       <%= f.input :name_or_description_contains, :label => "Keyword Search", :required => false %>
       SORT BY: <%= f.sort_link :id, "ID Order" %> | <%= f.sort_link :price, "Price Order" %>
     <% end %>
