--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -31,7 +31,7 @@
           <li><a href="#bubboli_love">Why Bubboli Loves It</a></li>
         </ul>
 
-        <div class="tab-content">
+        <div class="tab-content-line">
           <div class="tab-pane active" id="prod_desc"><%= simple_format(@gift.description) %></div>
           <div class="tab-pane" id="bubboli_love"><%= simple_format(@gift.why_bubboli_loves_it) %></div>
         </div>
@@ -49,13 +49,6 @@
 
         </script>
 
-
-
-
-
-
-        
-        
         </br>
         
         <div>
