--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -178,6 +178,19 @@ li.prod-list {
   -webkit-border-radius: 24px;
   -moz-border-radius: 24px;
   }
+  
+.child-search-well {
+  height: 190px;
+  float: left;
+  width: 280px;
+  padding: 10px;
+  text-align: center;
+  background-color: $background-blue;
+  border: 0px solid #fff;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  }
 
 .extra-padding {
   padding-left: 20px;
