--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
     <ul class="user-tabs nav-pills nav-stacked" id="myTab">
       <li class="active"><a href="#kids_followed">Kids I Following</a></li>
       <li><a href="#add_kid">Add A Kid</a></li>
+      <li><a href="#add_my_kid">Add My Kid</a></li>
       <li><a href="#acct_settings">Account Settings</a></li>
     </ul>
   </div>  
@@ -24,6 +25,7 @@
     <div class="tab-content">
       <div class="tab-pane active" id="kids_followed"><%= render(:template => "users/kids_follow") %></div>
       <div class="tab-pane" id="add_kid"><%= render(:template => "users/add_child") %></div>
+      <div class="tab-pane" id="add_my_kid"><%= render(:template => "users/add_my_child") %></div>
       <div class="tab-pane" id="acct_settings"><%= render(:template => "users/edit") %></div>
     </div>
   </div>
