--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,8 +24,8 @@
   <div class="span9">
     <div class="tab-content">
       <div class="tab-pane active" id="kids_followed"><%= render(:template => "users/kids_follow") %></div>
-      <div class="tab-pane" id="add_kid"><%= render(:template => "users/add_child") %></div>
-      <div class="tab-pane" id="add_my_kid"><%= render(:template => "users/add_my_child") %></div>
+      <div class="tab-pane" id="add_kid"><%= render(:template => "children/search_child") %></div>
+      <div class="tab-pane" id="add_my_kid"><%= render(:template => "children/add_my_child") %></div>
       <div class="tab-pane" id="acct_settings"><%= render(:template => "users/edit") %></div>
     </div>
   </div>
