--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -7,6 +7,7 @@
     <li><%= link_to "Manage Blog Categories", list_blog_category_path %></li>
     <li><%= link_to "Manage Gift Categories", list_gift_category_path %></li>
     <li><%= link_to "Manage Gift Age Ranges", list_gift_age_range_path %></li>
+    <li><%= link_to "Manage Relationship Types", list_relation_types_path %></li>
   </div>
 
 </div>
