--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,11 +12,13 @@
 
 </br>
   
+
+  <div class="row">
   <div class="span3 no-margin-or-bullet">
     <ul class="user-tabs nav-pills nav-stacked" id="myTab">
-      <li class="active"><a href="#kids_followed">Kids I Following</a></li>
-      <li><a href="#add_kid">Add A Kid</a></li>
-      <li><a href="#add_my_kid">Add My Kid</a></li>
+      <li class="active"><a href="#kids_followed">Kids</a></li>
+      <li><a href="#add_kid">Find</a></li>
+      <li><a href="#add_my_kid">Add</a></li>
       <li><a href="#acct_settings">Account Settings</a></li>
     </ul>
   </div>  
@@ -28,6 +30,7 @@
       <div class="tab-pane" id="add_my_kid"><%= render(:template => "children/add_my_child") %></div>
       <div class="tab-pane" id="acct_settings"><%= render(:template => "users/edit") %></div>
     </div>
+  </div>
   </div>
 
     <script>
