--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@ $dark-green-blue:     #53868B;
 $bubboli-red:         #FF6F6A;
 $subdued-red:         #FF9B97;
 $background-blue-two: #E4F9F8;
-$light-gray:          #bfbfbf;
+$light-gray:          #999999;
 $lightest-gray:       #F0F0F0;
 $background-orange:   #F9F2E3;
 $orange-red:          #FF4500;
@@ -107,6 +107,11 @@ select {
   margin-bottom: 4px
   }
 
+.space-break {
+  padding-top: 10px;
+  }
+
+
 
 /*==================================================
  * TOPBAR
@@ -184,6 +189,45 @@ li.prod-list {
   -webkit-border-radius: 24px;
   -moz-border-radius: 24px;
   }
+  
+.profile-well {
+  border-style: double;
+  border-width: 7px;
+  border-color: $dark-green-blue;
+  height: 180px;
+  float: left;
+  width: 200px;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  border-radius: 0px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  } 
+  
+.btn-group > .btn {
+  padding-top: 10px;
+  border-left: none;
+  border-right: none;  
+  }
+  
+.btn-group > .btn:first-child {
+  -webkit-border-bottom-left-radius: 0px;
+          border-bottom-left-radius: 0px;
+  -webkit-border-top-left-radius: 0px;
+          border-top-left-radius: 0px;
+  -moz-border-radius-bottomleft: 0px;
+  -moz-border-radius-topleft: 0px;
+  }
+  
+.btn-group > .btn:last-child {
+  -webkit-border-top-right-radius: 0px;
+          border-top-right-radius: 0px;
+  -webkit-border-bottom-right-radius: 0px;
+          border-bottom-right-radius: 0px;
+  -moz-border-radius-topright: 0px;
+  -moz-border-radius-bottomright: 0px;
+  } 
   
 .child-search-well {
   height: 190px;
