--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,54 +1,27 @@
 
+    
+    
+    <div class="span9">
+    <span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">Upcoming Birthdays</span>
+    <hr/>
+    
+    <% @kids.each do |kf| %>
+    
+    <%= kf.child.first_name if kf.child.birth_date.strftime("%B %d") < 3.months.from_now.strftime("%B %d") %>
+    <% end %>
+        
+    </br>
+    </br>
+    </br>
+    </br>
+    
+    <span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">Children I am Following</span>
+    <hr/>
+    <% @kids.each do |kf| %>
+    <%= kf.child.first_name %>
+    <% end %>
 
-<script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "271e0905-d30e-4bc4-af9d-b574b6eda513"}); </script>
-
-
-
-<div class="container">
-
-<h3>Welcome back, <%= @user.first_name %>.</h3>
-
-</br>
-  
-
-  <div class="row">
-  <div class="span3 no-margin-or-bullet">
-    <ul class="user-tabs nav-pills nav-stacked" id="myTab">
-      <li class="active"><a href="#kids_followed">Kids</a></li>
-      <li><a href="#add_kid">Find</a></li>
-      <li><a href="#add_my_kid">Add</a></li>
-      <li><a href="#acct_settings">Account Settings</a></li>
-    </ul>
-  </div>  
-
-  <div class="span9">
-    <div class="tab-content">
-      <div class="tab-pane active" id="kids_followed"><%= render(:template => "users/kids_follow") %></div>
-      <div class="tab-pane" id="add_kid"><%= render(:template => "children/search_child") %></div>
-      <div class="tab-pane" id="add_my_kid"><%= render(:template => "children/add_my_child") %></div>
-      <div class="tab-pane" id="acct_settings"><%= render(:template => "users/edit") %></div>
+    
     </div>
-  </div>
-  </div>
-
-    <script>
-      $('#myTab a').click(function (e) {
-        e.preventDefault();
-        $(this).tab('show');
-      })
-      
-      $(function () {
-        $('#myTab a:first').tab('show');
-      })
-      
-
-    </script>
-
-  
-</div>
-
-
-
+    
 
