--- a/app/views/children/search_child.html.erb
+++ b/app/views/children/search_child.html.erb
@@ -1,46 +1,50 @@
-<div class="span8">
+<div class="container">
 
-  <h4>
-  Before you add a child, search to see if the child is already in our database.
-  </h4>
-  </br>
+  <div class="span8">
+
+    <h4>
+    Before you add a child, search to see if the child is already in our database.
+    </h4>
+    </br>
   
-  <div class="row">
-    <div class=" span4 child-search-well ">
-    <%= simple_form_for @search, :url => user_path(@user) do |f| %>
-      <%= f.input :email_equals, :label => 'Search by Parent Email', :required => false %>
-      <p style="font-weight: bold">- OR -</p>
-      <%= f.input :work_email_equals, :label => 'Search by Parent Work Email', :required => false %>
-      <%= f.button :submit, 'Search', :class => 'btn primary' %>
-    <% end %>
+    <div class="row">
+      <div class=" span4 child-search-well ">
+      <%= simple_form_for @search, :url => search_child_path do |f| %>
+        <%= f.input :email_equals, :label => 'Search by Parent Email', :required => false %>
+        <p style="font-weight: bold">- OR -</p>
+        <%= f.input :work_email_equals, :label => 'Search by Parent Work Email', :required => false %>
+        <%= f.button :submit, 'Search', :class => 'btn primary' %>
+      <% end %>
 
-    </div>
+      </div>
     
     
     
-    <div class="span4">
-      <% if params[:search].blank? %>
-        Your search results here.
-      <% elsif @users.empty? %>
-        <p>This child is not in the database yet. </p>
-        <p>Be the first to add this child.</p>
-        <%= link_to "Add A Kid", '#', :class => "normal-button round" %>
-      <% else %>
-        <% @users.each do |user| %>
-            <div class="row span4">  
-              <div class="span2 image-placeholder">
+      <div class="span4">
+        <% if params[:search].blank? %>
+          Your search results here.
+        <% elsif @users.empty? %>
+          <p>This child is not in the database yet. </p>
+          <p>Be the first to add this child.</p>
+          <%= link_to "Add A Kid", new_child_path, :class => "normal-button round" %>
+        <% else %>
+          <% @users.each do |user| %>
+              <div class="row span4">  
+                <div class="span2 image-placeholder">
                 
-              </div>
-              <div class="span2">
-                <%= user.email %></br>
+                </div>
+                <div class="span2">
+                  <%= user.email %></br>
+                  <%= user.first_name %></br>
+                  <%= link_to "Follow #{user.email}", '#' %></br>
                 <%= user.first_name %></br>
-                <%= link_to "Follow #{user.email}", '#' %></br>
-              <%= user.first_name %></br>
+                </div>
               </div>
-            </div>
-        <% end %>
-      <% end %>        
+          <% end %>
+        <% end %>        
+      </div>
     </div>
+  
   </div>
   
 </div>
