--- a/app/views/blogs/list.html.erb
+++ b/app/views/blogs/list.html.erb
@@ -2,9 +2,9 @@
 
 <div class="container">
   
-  <p><%= link_to "«« Back to Blogs »»", blogs_path %> | <%= link_to "«« Back to Admin Panel »»", admin_path %></p></br> 
+  <p><%= link_to "«« Back to Blogs »»", blogs_path %> | <%= link_to "«« Back to Admin Panel »»", admin_path %></p><br> 
   
-  <h4>List of Blogs</h4></br>
+  <h4>List of Blogs</h4><br>
   
   <div>
     <%= simple_form_for @search_list, :url => list_blog_path do |f| %>
