--- a/app/views/gift_age_ranges/list.html.erb
+++ b/app/views/gift_age_ranges/list.html.erb
@@ -2,9 +2,9 @@
 
 <div class="container">
   
-  <p><%= link_to "«« Back to Gifts »»", gifts_path %> | <%= link_to "«« Back to Admin Panel »»", admin_path %></p></br> 
+  <p><%= link_to "«« Back to Gifts »»", gifts_path %> | <%= link_to "«« Back to Admin Panel »»", admin_path %></p><br> 
   
-  <h4>List of Gift Age Ranges</h4></br>
+  <h4>List of Gift Age Ranges</h4><br>
   
   <table class="table zebra-striped">
     <thead>
