--- a/app/views/gifts/_gift_list.html.erb
+++ b/app/views/gifts/_gift_list.html.erb
@@ -5,8 +5,8 @@
     <% for image in gift.gift_images.limit(1) %>
     <%= link_to image_tag(image.image_url(:thumb_pic)), gift %>
     <% end %>
-    <%= link_to gift.name, gift, :class => "strong" %></br>
-    <%= number_to_currency(gift.price) %></br>
+    <%= link_to gift.name, gift, :class => "strong" %><br>
+    <%= number_to_currency(gift.price) %><br>
     <div class="btn primary white-link"><%= link_to "Buy It Now", link, :target => "_blank" %></div>
   </div>
 </li>
