--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -22,8 +22,8 @@
       
       </div>
       
-      </br>
-      </br>
+      <br>
+      <br>
 
 
         <ul class="tabs nav-tabs " id="myTab">
@@ -56,7 +56,7 @@
 
         
         
-        </br>
+        <br>
         
         <div>
           <%= render(:partial => "related_gifts")%>
@@ -68,15 +68,15 @@
       <div class="row gift-buy-box">
         <h4 style= "color: #53868B" >Price: <%= number_to_currency(@gift.price) %></h4>
         <% link = "http://"+@gift.permalink %>
-        <div class="btn primary white-link"><%= link_to "Buy It Now", link, :target => "_blank" %></div></br></br>
+        <div class="btn primary white-link"><%= link_to "Buy It Now", link, :target => "_blank" %></div><br><br>
         <span class='st_facebook' st_img='<%= @gift.gift_images.first.image_url(:large_pic) %>'></span>
         <span class='st_twitter' st_title='<%= @page_title %> via @bubboli'></span>
         <span class='st_pinterest' st_img='<%= @gift.gift_images.first.image_url(:large_pic) %>'></span>
         <span class='st_email'></span>
       </div>
       
-      </br>
-      </br>
+      <br>
+      <br>
 
       <div class="row gift-buy-box2">
         <h4 style= "color: #53868B; text-align: center">Product Statistics</h4>
