--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -1,5 +1,5 @@
     <div class="container">
-  
+    <%= link_to "<<< Back To My Profile", user_path(current_user)%><br><br>
       <div class="row">
     
         <div class="span3" > 
@@ -28,7 +28,7 @@
           <hr/>
 
             <div class="row">
-
+              
             </div>
 
           </br>
