--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -9,7 +9,7 @@
       
           <div>      
             Location: <%= @city %>, <%= @state %><br>
-            Relationship: <%= @relationship %><br>
+            Relationship: <%= @relation %><br>
             Mother: <%= @mother %>
           </div>  
         
