--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       <% @relationships.each do |kf| %>    
         <% if (-31..0).include?(kf.child.birthday_days) %>      
         <li class="children-following child-list block">
-          <strong><%= link_to kf.child.first_name, child_path(kf.child) %></strong><br>
+          <strong><%= link_to kf.child.first_name, relationship_path(kf) %></strong><br>
           <span style="color: #999999; font-size: 12px">Relations:<%= kf.relation_type.name %></span><br>
           <span style="color: #999999; font-size: 12px">Birthday: <%= kf.child.birth_date.strftime("%b. %d")%></span>
         </li>
