--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -16,10 +16,10 @@ $(':checkbox').change(function(e){
       </div>
   
       <div>      
-        Location: <%= @city %>, <%= @state %><br>
+        Location: <%= @relationship.child_city(@child )%>, <%= @relationship.child_state(@child )%><br>
         Relationship: <%= @relation %><br>
-        Mother: <%= @mother %><br>
-        Father: <%= @father %>
+        Mother: <%= @relationship.child_mother(@child )%><br>
+        Father: <%= @relationship.child_father(@child )%>
       </div>  
     
       <div class="btn-group square space-break">
@@ -42,7 +42,18 @@ $(':checkbox').change(function(e){
             <%= f.association :gift_categories, :as => :check_boxes, :item_wrapper_class => "inline" %>
             <div class="pull-right"><%= f.button :submit, :class => "primary" %></div>
           <% end %>
+              
         </div>
+        
+        <%= @categories  %>
+        <%= @gifts.map {|p| p.gift.name } %>
+        <%= @gift_by_gender %>
+        <%= @child.gender %><br>
+        <%= @relationship.gift_by_gender(@child)%><br>
+        By Gender: <%= @gift %><br>
+        By Age: <%= @age %><br>
+        Result <%= @result%><br>
+        
         
       </br>
       </br>
@@ -53,6 +64,7 @@ $(':checkbox').change(function(e){
       <hr/>
 
         <div class="row">
+          
         </div>
 
     </div>
