--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -84,7 +84,7 @@
   
       <div class="row">
     
-        <div class="span3" > 
+        <div class="span3 static-left-side" > 
           <div class="profile-well">
           Test
           </div>
@@ -102,7 +102,7 @@
         </div>
     
     
-        <div class="span9">
+        <div class="offset3 span9">
 
           <%= yield %>
     
