--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,8 @@
 
   <div class="row">
     <ul class="child-list">
-      <% @relationships.each do |kf| %>    
-        <% if (-31..0).include?(kf.child.birthday_days) %>      
+      <% @relationships_by_birth_date.each do |kf| %>    
+        <% if (0..31).include?(kf.child.birthday_days) %>      
         <li class="children-following child-list block">
           <strong><%= link_to kf.child.first_name, relationship_path(kf) %></strong><br>
           <span style="color: #999999; font-size: 12px">Relations:<%= kf.relation_type.name %></span><br>
@@ -32,7 +32,7 @@
 
   <div class="row">
     <ul class="child-list">
-      <% @relationships.each do |kf| %>
+      <% @relationships_by_name.each do |kf| %>
       <li class="children-following child-list block">
         <strong><%= link_to kf.child.first_name, relationship_path(kf) %></strong><br>
         <span style="color: #999999; font-size: 12px">Relations:<%= kf.relation_type.name %></span><br>
