--- a/app/views/gifts/manage.html.erb
+++ b/app/views/gifts/manage.html.erb
@@ -24,7 +24,7 @@
           <%= f.input :gender, :as => :select, :collection => ['Male', 'Female', 'Unisex'] %>           
           <%= f.association :gift_age_ranges, :as => :check_boxes, :label => "Age Range" %>                    
           <%= f.input :price %>
-          <%= f.input :price_search, :as => :select, :collection => ['Less Than $25.00', '$25.00 - $49.99', '$50.00-$74.99', '$75.00-$99.99', '$100.00-$199.99', '$200.00 & Up'], :label => "Price Search" %>          
+          <%= f.association :gift_price_ranges, :as => :check_boxes, :label => "Price Search" %>          
           <%= f.association :gift_categories, :as => :check_boxes, :label => "Gift Categories" %>
 
         </div>
