deleted unnecessary lines in relationship model code

--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -54,7 +54,7 @@ $(':checkbox').change(function(e){
       </br>
       </br>
 
-      <span style="font-size: 16px; color: #FF6F6A">Test</span>
+      <span style="font-size: 16px; color: #FF6F6A">Recommended Gifts for <%= @child.first_name %></span>
       <hr/>
 
         <div class="row">
